--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
-    "dev":"nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "author": "Jose manuel",
   "license": "ISC",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "supertest": "^6.3.4"
   }
 }
